footer ,  без адаптива
нет icon нет бургер.

--- a/index.html
+++ b/index.html
@@ -138,6 +138,23 @@
             </div>
         </div>
     </section>
+    <footer class="footer">
+        <div class="footer__wrap">
+            <div class="container">
+                <div class="footer__body">
+                    <div class="footer__info"> <a href="#" class="info__link">Вход для партнеров</a> <a href="#"
+                            class="info__link">О компании</a> <a href="#" class="info__link">Контакты</a> </div>
+                    <div class="footer__social"> <a href="" class="social__link social__vk"></a> <a href=""
+                            class="social__link social__inst"></a> <a href="" class="social__link social__yt"></a> <a
+                            href="" class="social__link social__ok"></a> </div>
+                    <div class="footer__contacts"> <a href="tell:88005006105" class="footer__tel">8 800 500-61-05</a>
+                        <span class="footer__description">Круглосуточная поддержка</span>
+                        <p class="footer__copyright">© 2016 OOO «Городские Круизы»</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </footer>
 </body>
 
 </html>
